--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>Welcome to My Professional Dashboard</h1>
         <p>Select an option to view details</p>
+        <p>Hello there</p>
     </header>
 
     <main class="dashboard">
